<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listviewmodel"
            type="android.example.shoestorend.shoeitems.ListViewModel"/>
    </data>

    <FrameLayout
        android:id="@+id/shoedetailview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shoeitems.ShoeDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/smallpadding">

            <TextView
                android:id="@+id/titleview"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/general_padding"
                android:text="@string/hello_blank_fragment"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shoenametitle"
                android:layout_width="126dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="59dp"
                android:text="@string/shoename"
                android:textColor="#26358A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/editshoename"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleview" />

            <EditText
                android:id="@+id/editshoename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:text="@={listviewmodel.shoeList.shoeName}"
                android:hint="@string/shoenamehint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/shoenametitle"
                app:layout_constraintTop_toBottomOf="@+id/titleview" />

            <TextView
                android:id="@+id/companynametitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:text="@string/companyname"
                android:textColor="#26358A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/editcompanyname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoenametitle" />

            <EditText
                android:id="@+id/editcompanyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:text="@={listviewmodel.shoeList.companyName}"
                android:hint="@string/companynamehint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/companynametitle"
                app:layout_constraintTop_toBottomOf="@+id/editshoename" />

            <TextView
                android:id="@+id/shoesizetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:text="@string/shoesize"
                android:textColor="#26358A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/editshoesize"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companynametitle" />

            <EditText
                android:id="@+id/editshoesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/shoesizehint"
                android:text="@={`` + listviewmodel.shoeList.shoeSize}"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/shoesizetitle"
                app:layout_constraintTop_toBottomOf="@+id/editcompanyname" />

            <TextView
                android:id="@+id/desctitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:text="@string/desc"
                android:textColor="#26358A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoesizetitle" />

            <EditText
                android:id="@+id/editdesc"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/deschint"
                android:text="@={listviewmodel.shoeList.descriptionInfo}"
                android:inputType="textPersonName|textImeMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editshoesize" />

            <Button
                android:id="@+id/saveitem"
                style="@style/ShoeButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                android:text="@string/savebtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancelitem"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancelitem"
                style="@style/ShoeButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="50dp"
                android:text="@string/cancelbtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/saveitem" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>