<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginsuccess"
        style="@style/LoginSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/general_padding">

        <TextView
            android:id="@+id/user_name_view"
            style="@style/LoginStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/username_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:inputType="textWebEmailAddress|textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/password_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_view" />

        <TextView
            android:id="@+id/password_view"
            style="@style/LoginStyle"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/password_id"
            app:layout_constraintBottom_toTopOf="@+id/password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="101dp"
            android:layout_marginRight="101dp"
            android:layout_marginBottom="100dp"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_view" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toStartOf="@+id/signupbtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            app:layout_constraintBottom_toBottomOf="@+id/loginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginbtn"
            app:layout_constraintTop_toTopOf="@+id/loginbtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

    <!-- we create the loginLayout, to be used as the first view on the screen
    remember to add <layout> tags for DataBinding. Also the xml file name is used when referencing for DataBinding
    i.e. this file is login_main for DataBinding we use LoginMainBinding -->